apps/desktop/changelogs/0.2.5-beta.33/zh.md
---
version: 0.2.5-beta.33
date: 2026-03-24
---

## 0.2.5-beta.33

### ✨ 新功能

- **图片编辑支持内联遮罩绘制**：为支持的图片编辑变体新增可绘制的 mask 槽位，支持在画布上直接涂抹遮罩，并在输入栏中提供预览、画笔、撤销和重做控制。
- **媒体生成参数更完整**：为多个图片和视频变体补充了输出张数、图片尺寸、智能改写、负向提示词、视频分辨率、镜头类型、口型同步延长视频和人脸阈值等控制项。

### 🚀 改进

- **生成反馈更及时**：图片和视频生成节点现在会先立即进入 loading 状态，再在后台完成媒体上传和任务提交，交互响应更快。
- **媒体上传更稳**：Web 和 Server 现在都会在上传前压缩超大图片，减少超限 payload 并提升生成成功率。
- **登录回调页重做**：认证回调页面更新为更完整的 OpenLoaf 风格，并在成功后自动尝试回到应用。
- **替换媒体后的尺寸更自然**：替换图片或视频后，会基于真实图片比例和视频元数据自动调整节点尺寸，画布布局更合理。
- **新增官方网站入口**：在账号菜单和 About 页面中新增 OpenLoaf 官方网站入口。

### 💄 界面优化

- **Board 面板细节打磨**：优化了 mask 槽位展示、面板覆盖层层级和锚点渲染，画布交互更干净稳定。
- **弹窗与危险操作样式优化**：扩展了定价弹窗尺寸，并提升了邮件和记忆设置里危险操作按钮的对比度。
- **视频生成反馈优化**：调整了视频节点生成中的进度配色和空态切换，减少生成中闪回空占位的问题。

### ⚡ 性能

- **Board 历史快照更轻量**：优化了画布历史记录的深拷贝和相等性比较，避免重复复制大型 data URL 数据。

### 🌐 国际化

- **新增多语言文案**：为遮罩槽位和官方网站入口补充了多语言翻译。
- **聊天输入框文案修复**：修复聊天输入框取消按钮的文案查找问题。

### 🐛 问题修复

- 修复 temp board 和 project board 的文件作用域解析问题，资产、缩略图、元数据、AI 命名、预览和删除操作现在都会稳定通过 `boardId` 处理。
- 修复仅传入 `boardId` 时媒体代理路径恢复和任务恢复不稳定的问题，包括服务重启后的恢复场景。
- 修复 board 图片和视频下载在缺少 `projectId` 时，无法根据 `boardId` 回查真实项目归属的问题。
- 修复生成结果返回路径不统一的问题，媒体保存结果现在统一返回 board-relative 路径，避免前端重复拼接。
- 修复连线连接到已有节点后仍停留在源节点选中的问题。
- 修复 board 预览、快捷操作和文件打开流程未传递正确 `boardId` 上下文的问题。
- 修复仅有 board 作用域路径时，工具栏、文件预览器和生成面板中的媒体上传路径异常问题。
- 修复文本生成面板在输入法组合输入过程中按回车会误触发提交的问题。
